Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>TA{00}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>