Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Session</relationshipLabel>
    <relationshipName>TestTasks</relationshipName>
    <type>Lookup</type>
</CustomField>