Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Duration_In_Hour__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Hour__c</fullName>
    <label>Duration In Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>