Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/FacultyID__c.field-meta.xml
<CustomField>
    <fullName>FacultyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <type>Lookup</type>
</CustomField>