Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Select_Session__c.field-meta.xml
<CustomField>
    <fullName>Select_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Session</label>
    <type>Checkbox</type>
</CustomField>