Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <label>Session Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>