Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class And Testmethod</fullName>
            </value>
            <value>
                <fullName>Apex trigger</fullName>
            </value>
            <value>
                <fullName>WebServices</fullName>
            </value>
            <value>
                <fullName>Standard And Custom Object</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Action Class</fullName>
            </value>
            <value>
                <fullName>Struts Tile frmework</fullName>
            </value>
            <value>
                <fullName>JSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>