Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed__c</fullName>
    <label>Task Completed</label>
    <length>15</length>
    <type>Text</type>
</CustomField>