Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <label>Test Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>