Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Topic_Covered__c.field-meta.xml
<CustomField>
    <fullName>Topic_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Topic Covered</label>
    <type>Checkbox</type>
</CustomField>