Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Topic_InProgress__c.field-meta.xml
<CustomField>
    <fullName>Topic_InProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Topic InProgress</label>
    <type>Checkbox</type>
</CustomField>