Reetan.Nayak Dev 25/force-app/main/default/objects/Session__c/fields/Topic_Not_Yet_Started__c.field-meta.xml
<CustomField>
    <fullName>Topic_Not_Yet_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Topic Not Yet Started</label>
    <type>Checkbox</type>
</CustomField>